# saebyeol.md

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  manage.sh
.github/: release-body-suffix.md
.github/scripts/: bump_cask_sha.py
.github/workflows/: release-add-platforms.yml  release.yml
Casks/: saebyeol.rb
apps/ime-app/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
apps/ime-app/src-tauri/capabilities/: default.json
apps/ime-app/src-tauri/icons/: icon.icns
apps/ime-app/src-tauri/src/: main.rs  ngram.rs  settings.rs
crates/ime-demo/: Cargo.toml
crates/ime-demo/src/: main.rs
crates/lib-ime/: Cargo.toml
crates/lib-ime/src/: lib.rs
crates/lib-ime/src/abbr/: dict.rs  engine.rs  loader.rs  mod.rs  model.rs  sample_abbreviations.toml
crates/lib-ime/src/hangul/: compose.rs  fsm.rs  jamo.rs  mod.rs  output.rs
crates/lib-ime/src/layout/: custom.rs  dubeolsik.rs  key.rs  latin.rs  mod.rs  sebeolsik.rs  sebeolsik_final.rs
crates/lib-ime/tests/: fsm.rs
